Fix alignment of controls buttons in message.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -765,6 +765,10 @@ li {
     margin-top: 35px;
 }
 
+.message__btns {
+    display: flex;
+    justify-content: center;
+}
 
 .message__btns div {
     font-size: 0.9rem;
